1556750221 | 10 files | M bin/version.txt,  M content/vrmonitor/translations/vrmonitor_english.txt,  M tools/steamvr_environments/game/bin/linuxsteamrt64/libengine2_strings.txt,  M tools/steamvr_environments/game/steamtours/bin/linuxsteamrt64/libclient_strings.txt,  M tools/steamvr_environments/game/steamtours/bin/linuxsteamrt64/libserver_strings.txt,  M tools/steamvr_environments/game/steamtours/cfg/bindings_holographic.json,  M tools/steamvr_environments/game/steamtours/cfg/bindings_knuckles.json,  M tools/steamvr_environments/game/steamtours/cfg/bindings_vive_controller.json,  M tools/steamvr_environments/game/steamtours/pak02_dir.txt,  M tools/steamvr_environments/game/steamtours/pak02_dir/panorama/localization/steamtours_english.txt
https://steamdb.info/patchnotes/3785930/

--- a/content/vrmonitor/translations/vrmonitor_english.txt
+++ b/content/vrmonitor/translations/vrmonitor_english.txt
@@ -1170,8 +1170,8 @@
 "Monitor_RestartRequestedDialog_Restart" "Restart SteamVR"
 "Monitor_RestartRequestedDialog_Quit" "Quit SteamVR"
 
-"Monitor_WakingBaseStations" "Waking up Base Stations..."
-"Monitor_PuttingBaseStationsInStandby" "Bases going into standby..."
+"Monitor_WakingBaseStations" "Bases Powering Up..."
+"Monitor_PuttingBaseStationsInStandby" "Bases Powering Down..."
 
 "VRApplicationError_None" "No Error"
 
