--- a/tools/steamvr_environments/game/steamtours/pak02_dir/panorama/localization/steamtours_english.txt
+++ b/tools/steamvr_environments/game/steamtours/pak02_dir/panorama/localization/steamtours_english.txt
@@ -580,8 +580,8 @@
 		"VR_Avatar_Hands_Fingers_Desc"	"Hands with fingers. Who really uses all five of their fingers anyway?"
 		"VR_Avatar_Hands_Full"			"Five Fingered Hands"
 		"VR_Avatar_Hands_Full_Desc"		"Fully animated five fingered hand."
-		"VR_Avatar_Knuckles"			"[Dev] Knuckles controllers"
-		"VR_Avatar_Knuckles_Desc"		"[Dev] Experimental controllers codenamed 'Knuckles' being tested by Valve"
+		"VR_Avatar_Knuckles"			"Valve Index Controllers"
+		"VR_Avatar_Knuckles_Desc"		"Valve Index Controllers."
 		"VR_Avatar_WindowsMR_Controllers"			"Windows MR Controllers"
 		"VR_Avatar_WindowsMR_Controllers_Desc"		"Windows MR controllers"
 		"VR_Avatar_Generic_Tracked"			"Generic Tracked Controllers"
