1557437098 | 19 files | M bin/version.txt,  M content/vrmonitor/translations/vrmonitor_english.txt,  M drivers/lighthouse/resources/webinterface/localization/lighthouse_web_english.json,  M resources/webinterface/dashboard/localization/bindingui_english.json,  M tools/steamvr_environments/game/steamtours/bin/linuxsteamrt64/libclient_strings.txt,  M tools/steamvr_environments/game/steamtours/bin/linuxsteamrt64/libserver_strings.txt,  M tools/steamvr_environments/game/steamtours/cfg/actions.json,  M tools/steamvr_environments/game/steamtours/cfg/bindings_gamepad.json,  M tools/steamvr_environments/game/steamtours/cfg/bindings_generic.json,  M tools/steamvr_environments/game/steamtours/cfg/bindings_holographic.json,  M tools/steamvr_environments/game/steamtours/cfg/bindings_knuckles.json,  M tools/steamvr_environments/game/steamtours/cfg/bindings_knuckles_ev1.json,  M tools/steamvr_environments/game/steamtours/cfg/bindings_touch.json,  M tools/steamvr_environments/game/steamtours/cfg/bindings_vive_controller.json,  M tools/steamvr_envi
https://steamdb.info/patchnotes/3809481/

--- a/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_english.json
+++ b/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_english.json
@@ -18,11 +18,11 @@
 
 	"pairing_selectdevice_title" : "Select your controller type",
 
-	"pairingdevice_knuckles_controllername" : "Knuckles Controller",
+	"pairingdevice_knuckles_controllername" : "Index Controller",
 	"pairingdevice_vivewand_shortname" : "HTC Vive Controller",
 	"pairingdevice_vivetracker_shortname" : "HTC Vive Tracker",
 
-	"pairingdevice_a_knuckles_controllername" : "a Knuckles Controller",
+	"pairingdevice_a_knuckles_controllername" : "an Index Controller",
 	"pairingdevice_a_vivewand_shortname" : "an HTC Vive Controller",
 	"pairingdevice_a_vivetracker_shortname" : "an HTC Vive Tracker",
 
