--- a/content/vrmonitor/translations/vrmonitor_english.txt
+++ b/content/vrmonitor/translations/vrmonitor_english.txt
@@ -93,8 +93,6 @@
 "Status_Title" "SteamVR Status"
 "Status_MenuButton_SteamVR" "STEAMVR"
 "Status_MenuButton_SteamVR_Branch" "STEAMVR %1"
-"Status_CompositorDrawing" ""
-"Status_ApplicationDrawingUnresponsive" ""
 "Status_HMD" "Headset"
 "Status_Controller" "Controller"
 "Status_Base" "Base Station"
@@ -411,6 +409,8 @@
 
 "Settings_Advanced_RefreshRate_Header" "Refresh Rate"
 "Settings_Advanced_RefreshRate_HzSuffix" "hz"
+"Settings_Advanced_RefreshRate_NotFound" "<b>NOTE:</b> Additional refresh rates are supported by your HMD, but they were not detected by the graphics driver."
+"Settings_Advanced_RefreshRate_NotAvailableExtended" "<b>NOTE:</b> Additional refresh rates are supported by your HMD, but SteamVR cannot manage refresh rates when the HMD is in extended mode. <a href='vrmonitor://directmode/enable'><span style='color:white;'>Enable direct mode.</span></a>"
 "Settings_Advanced_Restart" "<i>This pending change will take effect once you <a href='vrmonitor://restartsystem'><span style='color:white;'>Restart SteamVR</span></a></i>"
 
 "Settings_Advanced_Supersampling_Header" "Application Resolution"
