--- a/resources/webinterface/dashboard/localization/bindingui_english.json
+++ b/resources/webinterface/dashboard/localization/bindingui_english.json
@@ -228,7 +228,9 @@
   "BindingUI_SaveDescriptionPlaceholder": "(Optional)",
   "BindingUI_SelectThisBinding": "Select this Binding",
   "BindingUI_EditThisBinding": "Edit this Binding",
-
+  "BindingUI_ImportThisBinding": "Import this Binding",
+  "BindingUI_List_OldVersionWarning": "These bindings were made with an older version of %1$s and need to be updated.",
+  "BindingUI_List_OldVersionWarning_CurrentBinding": "These bindings were made with an older version of %1$s and may not include all necessary actions.",
   "BindingUI_SelectAction_Required": "Required",
   "BindingUI_SelectAction_Suggested": "Suggested",
 
@@ -245,7 +247,10 @@
   "BindingList_PageTitle": "Change bindings for %1$s",
   "BindingList_ControllerOption": "Current Controller",
   "BindingUI_List_Delete_Confirm": "Permanently delete binding %1$s?",
-  "BindingUI_List_Select_Confirm": "You have unsaved changes for your current binding. Did you want to discard those changes or save them as a personal bind before using this bind?",
+  "BindingUI_ConfirmSelect_Title" : "Replace current binding?",
+  "BindingUI_List_Select_Confirm": "You have unsaved changes for your current binding. Did you want to discard those changes or save them as a personal bind before using this bind.",
+  "BindingUI_List_Select_Confirm_Convert": "You also have unsaved changes for your current binding. Updating this binding will discard those changes, or you can save them as a personal bind before updating this bind?",
+  "BindingUI_List_Upgrade_Confirm": "This binding is from a previous version of %1$s. You may need to bind additional actions in order to make it work.",
   "BindingUI_List_Developer_Binding_Title": "Official bindings for %1$s",
   "BindingUI_List_Developer_Binding_Description": "These are the official bindings published by the developer of this game",
   "BindingUI_List_Legacy_Binding_Title": "Default bindings for %1$s",
@@ -253,12 +258,15 @@
   "BindingUI_List_PublishedBy": "Created by %1$s",
   "BindingUI_List_Autosave": "%1$s (Local changes)",
   "BindingList_TrackerEdit": "Manage Trackers",
+  "Button_Import": "Import",
+  "PreservedAutosaveName" : "Preserved local changes before upgrade",
 
   "BindingUI_SteamVRUnavailable": "Please run SteamVR to continue using the binding interface",
   "BindingUI_ErrorLoadingBindingTitle": "Binding file failed to load",
 
   "input_binding_load_failed": "Failed to load input bindings for %1$s. Please select another binding option.",
   "input_binding_load_failed_no_url": "%2$s binding for %1$s was not set. Please select a binding option from the list or create a new one.",
+  "input_binding_load_below_minimum_version": "%2$s binding for %1$s was from older version of %1$s. Your bindings have been set back to the default.",
 
   "unknown_application": "Unknown Application",
 
